--- a/src/components/markup/info/index.module.css
+++ b/src/components/markup/info/index.module.css
@@ -1,5 +1,4 @@
 .infoblock {
-  display: block;
   width: 100%;
   background-color: var(--shade-color);
   padding: 0.5em;
