--- a/src/components/views/story/scene-paragraph/index.module.css
+++ b/src/components/views/story/scene-paragraph/index.module.css
@@ -1,5 +1,4 @@
 .paragraph {
-    display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0;
